@@ -121,6 +121,7 @@ GetAHit=SELECT SUM(counter) FROM hits WHERE area=? AND query=?
 SumHits=SELECT area,query,pageid,photoid,SUM(counter) AS counter,count(*) AS number,max(createdate) AS createdate FROM hits WHERE createdate <= ? AND area=? GROUP BY query,pageid,photoid
 DelHits=DELETE FROM hits WHERE createdate <= ? AND area=?
 DelAHit=DELETE FROM hits WHERE createdate <= ? AND area=? AND pageid=? AND photoid=? AND query=?
+DelAHit2=DELETE FROM hits WHERE createdate <= ? AND area=? AND pageid=? AND photoid=? AND (query='' OR query IS NULL)
 GetHitAreas=SELECT area,count(*) AS count FROM hits GROUP BY area ORDER BY count
 
 PageHitsAllTime=SELECT sum(h.counter) AS counter,h.area,h.query \
