@@ -6,7 +6,7 @@ mailhost=
 cookiename=session
 timeout=3600
 autoguest=1
-copyright=&#169; 1999-2013 CPAN Testers.
+copyright=&#169; 1999-2014 CPAN Testers.
 lastpagereturn=0
 minpasslen=6
 maxpasslen=20
@@ -14,6 +14,8 @@ maxpasslen=20
 [INTERNAL]
 logfile=/var/www/cpanblog/html/cache/audit.log
 loglevel=0
+parsehtml=0
+parsetest=/var/www/cpanblog/html/cache/parsetest.txt
 
 blockurl=http://block.grango.org
 
