@@ -1,0 +1,58 @@
+[PROJECT]
+icode=cpanblog
+iname=CPAN Testers Blog
+administrator=barbie@missbarbell.co.uk
+mailhost=
+cookiename=session
+timeout=3600
+autoguest=1
+copyright=&#169; 1999-2014 CPAN Testers.
+lastpagereturn=0
+minpasslen=6
+maxpasslen=20
+
+[INTERNAL]
+logfile=audit.log
+loglevel=4
+parsehtml=0
+parsetest=/var/www/cpanblog/html/cache/parsetest.txt
+
+blockurl=http://block.grango.org
+
+diutils=ImageMagick
+
+[HTTP]
+webpath=
+cgipath=/cgi-bin
+realm=public
+basedir=/var/www/cpanblog
+webdir=/var/www/cpanblog/html
+cgidir=/var/www/cpanblog/cgi-bin
+
+requests=/var/www/cpanblog/cgi-bin/config/requests
+
+[DATABASE]
+driver=mysql
+database=cpanblog
+dbhost=localhost
+dbuser=secret
+dbpass=s3cr3t
+
+[CMS]
+htmltags=+img,em,u,pre,table,tr,th,td
+maxpicwidth=500
+randpicwidth=400
+blank=images/blank.png
+
+testing=0
+
+[RSS]
+rsstitle=CPAN Testers Blog
+rssdesc=Latest news and views about CPAN Testers
+rsslink=http://blog.cpantesters.org
+rssweb=http://blog.cpantesters.org
+rssname=Barbie
+rssmail=barbie@missbarbell.co.uk
+
+[MAIL]
+mailsend=/usr/sbin/sendmail -bm
